refactor: remove MenuConfiguration, refactor JdbcMenuRepository to use Menu entities directly
- Add `index` property to Menu entity for ordering
- Refactor MenuRepository port to use List<Menu> instead of MenuConfiguration
- Refactor JdbcMenuRepository to save/load individual Menu entities
- Move MenuConfiguration logic into ManageMenuService (saveMenuList/loadMenusSorted)
- Update ManagePageService to use new MenuRepository API
- Update all tests (JdbcMenuRepositoryTest, ManageMenuServiceTest, ManagePageServiceTest)
- Delete MenuConfiguration class

Co-authored-by: arassec <14818006+arassec@users.noreply.github.com>